; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/emulex/benet/extr_be_main.c_be_txq_notify.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/emulex/benet/extr_be_main.c_be_txq_notify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.be_adapter = type { i64 }
%struct.be_tx_obj = type { i64, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@BE_ERROR_HW = common dso_local global i32 0, align 4
@DB_TXULP_RING_ID_MASK = common dso_local global i32 0, align 4
@DB_TXULP_NUM_POSTED_MASK = common dso_local global i32 0, align 4
@DB_TXULP_NUM_POSTED_SHIFT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.be_adapter*, %struct.be_tx_obj*, i32)* @be_txq_notify to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @be_txq_notify(%struct.be_adapter* %0, %struct.be_tx_obj* %1, i32 %2) #0 {
  %4 = alloca %struct.be_adapter*, align 8
  %5 = alloca %struct.be_tx_obj*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.be_adapter* %0, %struct.be_adapter** %4, align 8
  store %struct.be_tx_obj* %1, %struct.be_tx_obj** %5, align 8
  store i32 %2, i32* %6, align 4
  store i32 0, i32* %7, align 4
  %8 = load %struct.be_adapter*, %struct.be_adapter** %4, align 8
  %9 = load i32, i32* @BE_ERROR_HW, align 4
  %10 = call i64 @be_check_error(%struct.be_adapter* %8, i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %3
  br label %39

13:                                               ; preds = %3
  %14 = load %struct.be_tx_obj*, %struct.be_tx_obj** %5, align 8
  %15 = getelementptr inbounds %struct.be_tx_obj, %struct.be_tx_obj* %14, i32 0, i32 1
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = load i32, i32* @DB_TXULP_RING_ID_MASK, align 4
  %19 = and i32 %17, %18
  %20 = load i32, i32* %7, align 4
  %21 = or i32 %20, %19
  store i32 %21, i32* %7, align 4
  %22 = load i32, i32* %6, align 4
  %23 = load i32, i32* @DB_TXULP_NUM_POSTED_MASK, align 4
  %24 = and i32 %22, %23
  %25 = load i32, i32* @DB_TXULP_NUM_POSTED_SHIFT, align 4
  %26 = shl i32 %24, %25
  %27 = load i32, i32* %7, align 4
  %28 = or i32 %27, %26
  store i32 %28, i32* %7, align 4
  %29 = call i32 (...) @wmb()
  %30 = load i32, i32* %7, align 4
  %31 = load %struct.be_adapter*, %struct.be_adapter** %4, align 8
  %32 = getelementptr inbounds %struct.be_adapter, %struct.be_adapter* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = load %struct.be_tx_obj*, %struct.be_tx_obj** %5, align 8
  %35 = getelementptr inbounds %struct.be_tx_obj, %struct.be_tx_obj* %34, i32 0, i32 0
  %36 = load i64, i64* %35, align 8
  %37 = add nsw i64 %33, %36
  %38 = call i32 @iowrite32(i32 %30, i64 %37)
  br label %39

39:                                               ; preds = %13, %12
  ret void
}

declare dso_local i64 @be_check_error(%struct.be_adapter*, i32) #1

declare dso_local i32 @wmb(...) #1

declare dso_local i32 @iowrite32(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
